kubernetes/ordering/base/ordering-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordering-service
spec:
  selector:
    app: ordering-service
  ports:
    - port: 5000
      targetPort: 5000
