kubernetes/ordering/base/ordering-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordering-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: tenark.com
    http:
      paths:
      - path: /ordering
        pathType: Prefix
        backend:
          service:
            name: ordering-service
            port:
              number: 5000
  # Optional TLS (uncomment if you have a certificate)
  # tls:
  # - hosts:
  #     - tenant-a.bookstore.com
  #   secretName: tenant-a-tls
